modificando archivos update y new para que hereden de form.html el contenido

--- a/app_registro/templates/delete.html
+++ b/app_registro/templates/delete.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block mainContent %}
 <h1>Borrar datos</h1>
+<p>Simulacro de contabilidad</p>
 
 <form action="">
   <label for="fecha">Fecha</label>
