--- a/app_registro/templates/form.html
+++ b/app_registro/templates/form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block mainContent %}
-<h1>{{typeAction}}</h1>
+
+<h1>{{typeAction}} de Ingresos/Gastos</h1>
 <p>Simulacro de contabilidad</p>
 
 <form action="">
