--- a/app_registro/templates/new.html
+++ b/app_registro/templates/new.html
@@ -1,19 +1,1 @@
-{% extends "base.html" %} {% block mainContent %}
-<h1>Nuevo registro</h1>
-<p>Simulacro de contabilidad</p>
-
-<form action="">
-  <label for="fecha">Fecha</label>
-  <input type="text" name="text" placeholder="Ingrese fecha" />
-  <br />
-  <label for="concepto">Concepto</label>
-  <input type="text" name="concepto" placeholder="Ingrese concepto" />
-  <br />
-  <label for="cantidad">Cantidad</label>
-  <input type="number" name="cantidad" placeholder="Ingrese cantidad" />
-  <br />
-  <button onclick="alert('Ya lo guardaste, gracias')">Guardar</button>
-</form>
-
-<a href="/">Volver</a>
-{% endblock %}
+{% extends "form.html" %}
