--- a/app_registro/templates/index.html
+++ b/app_registro/templates/index.html
@@ -14,9 +14,9 @@
     {% for item in lista %} {#Se remplazan las variables por los valores
     declarados en routes#}
     <tr>
-      <td>{{item.fecha}}</td>
-      <td>{{item.concepto}}</td>
-      <td>€{{item.cantidad}}</td>
+      <td>{{item[0]}}</td>
+      <td>{{item[1]}}</td>
+      <td>€{{item[2]}}</td>
     </tr>
     {% endfor %}
   </tbody>
