--- a/app_registro/templates/form.html
+++ b/app_registro/templates/form.html
@@ -5,15 +5,15 @@
 
 <form action="/new" method="post">
   <label for="fecha">Fecha</label>
-  <input type="date" name="fecha" required />
+  <input type="date" name="date" required />
   <br />
   <label for="concepto">Concepto</label>
-  <input type="text" name="concepto" placeholder="Ingrese concepto" required />
+  <input type="text" name="concept" placeholder="Ingrese concepto" required />
   <br />
   <label for="cantidad">Cantidad</label>
   <input
     type="number"
-    name="cantidad"
+    name="quantity"
     placeholder="Ingrese cantidad"
     required
   />
