Completada función borrar

--- a/app_registro/templates/base.html
+++ b/app_registro/templates/base.html
@@ -20,10 +20,7 @@
 
   <body>
     <header>
-      <nav>
-        <a href="/">Inicio</a> | <a href="/new">Nuevo</a> |
-        <a href="/update">Editar</a> | <a href="/delete">Eliminar</a> |
-      </nav>
+      <nav><a href="/">Inicio</a> | <a href="/new">Nuevo</a></nav>
 
       <h1>Aplicación Flask</h1>
     </header>
