--- a/app_registro/templates/base.html
+++ b/app_registro/templates/base.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/pico.css" />
     <title>Ingresos-Gastos: {{pageTitle}}</title>
   </head>
-  <style>
-    table,
-    th,
-    td {
-      border: 2px solid black;
-    }
-
-    table {
-      width: 100%;
-    }
-  </style>
-
   <body>
     <header>
       <nav><a href="/">Inicio</a> | <a href="/new">Nuevo</a></nav>
